Added embedded page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <h1>
 <a name="rpn-pplane" class="anchor" href="#rpn-pplane"><span class="octicon octicon-link"></span></a>rpn-pplane</h1>
 
+<p><a href="embed-swf.html">The application can be found here.</a></p>
+
 <p>Written for an ODE class, this is a simple replacement for the java versions found here: <a href="http://math.rice.edu/%7Edfield/dfpp.html">http://math.rice.edu/~dfield/dfpp.html</a></p>
 
 <h2>
