--- a/embed-swf.html
+++ b/embed-swf.html
@@ -14,8 +14,8 @@
 			attributes.name = "";
 			attributes.styleclass = "";
 			//attributes.align = "middle";			
-			swfobject.embedSWF("assets/rpn-pplane.swf", "flashContent", "800", 
-				"600", "9.0.0", false, flashvars, params, attributes);
+			swfobject.embedSWF("assets/rpn-pplane.swf", "flashContent", "100%", 
+				"100%", "9.0.0", false, flashvars, params, attributes);
 		</script>
 	</head>
 	<body>
